force-app/main/default/objects/nFORCE__Business_Process_Settings__c/fields/nFORCE__Disable_Triggers__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Disable_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Administrators populate this optional checkbox field that, when set to true, disables the execution of business process triggers. By default, it is false.</description>
    <inlineHelpText>Select to disable triggers.</inlineHelpText>
    <label>Disable Triggers</label>
    <type>Checkbox</type>
</CustomField>