force-app/main/default/objects/nFORCE__Business_Process_Settings__c/fields/nFORCE__Disable_Validation_Rules__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Disable_Validation_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The user manually populates this optional checkbox to disable validation rules on the name fields for business activity and business process. By default, it is false.</description>
    <inlineHelpText>This checkbox field indicates if the system should disable validation rules for business activity and business process.</inlineHelpText>
    <label>Disable Validation Rules</label>
    <type>Checkbox</type>
</CustomField>