force-app/main/default/objects/nFORCE__Business_Process_Settings__c/fields/nFORCE__Enable_Method_Logging__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Enable_Method_Logging__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable logging upon method entrance and exit. The Enable_Method_Logging__c field in the Business_Process__c custom object will take precendence over this value.</description>
    <inlineHelpText>Check this box to enable logging upon method entrance and exiting. NOTE: This will greatly increase the size of the logs included in your output.</inlineHelpText>
    <label>Enable Method Logging</label>
    <type>Checkbox</type>
</CustomField>