force-app/main/default/objects/nFORCE__Business_Process_Settings__c/fields/nFORCE__Encrypt_Dynamic_Configuration__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Encrypt_Dynamic_Configuration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Administrators populate this optional checkbox field that, when set to true, encrypts the dynamic configuration provided at runtime for the business process interaction. The default is false.</description>
    <inlineHelpText>Select to encrypt the dynamic configuration provided at runtime for the business process interaction.</inlineHelpText>
    <label>Encrypt Dynamic Configuration</label>
    <type>Checkbox</type>
</CustomField>